en/14.6/install/install.rst
============
Installation
============

Requirements
============

|Fess| can be available in the following environment:

-  OS: Windows/Unix with Java environment
-  Java: Java 17
-  (RPM or DEB) Elasticsearch: 8.6.0

If Java is not installed in your environment where Fess will be used, install JDK from `Adoptium site <https://adoptium.net/>`__ .
Embedded Elasticsearch is not recommended for production use or load testing.


Download
========

Download a package for Fess and Elasticsearch from `Download site <https://fess.codelibs.org/ja/downloads.html>`__.

Installation
============

Install Elasticsearch
---------------------

Install Elasticsearch by referring to `Elasticsearch Reference <https://www.elastic.co/guide/en/elasticsearch/reference/current/index.html>`__.

Elasticsearch plugin depends on a version of installed Elasticsearch.
If you install Elasticsearch X.Y.Z, you need to install plugins with the same version prefix, such as X.Y.Z.0.

Using ZIP Package
-----------------

After installing Elasticsearch 8.6.0, install Elasticsearch plugins to plugins directory.
In this guide, Elasticsearch is installed to $SEARCH_ENGINE_HOME.

::

    $ $SEARCH_ENGINE_HOME/bin/elasticsearch-plugin install org.codelibs:elasticsearch-analysis-fess:8.6.0.0
    $ $SEARCH_ENGINE_HOME/bin/elasticsearch-plugin install org.codelibs:elasticsearch-analysis-extension:8.6.0.0
    $ $SEARCH_ENGINE_HOME/bin/elasticsearch-plugin install org.codelibs:elasticsearch-minhash:8.6.0.0

Notice that these plugins depend on a version of Elasticsearch.

Next, install elasticsearch-configsync,

::

    $ curl -o /tmp/configsync.zip https://repo.maven.apache.org/maven2/org/codelibs/elasticsearch-configsync/8.6.0.0/elasticsearch-configsync-8.6.0.0.zip
    $ mkdir -p $SEARCH_ENGINE_HOME/modules/configsync
    $ unzip -d $SEARCH_ENGINE_HOME/modules/configsync /tmp/configsync.zip

and add the following setting to $SEARCH_ENGINE_HOME/config/elasticsearch.yml.
For configsync.config_path, the value is an absolute path of $SEARCH_ENGINE_HOME/data/config.

::

    configsync.config_path: [absolute path of $SEARCH_ENGINE_HOME]/data/config/
    xpack.security.enabled: false

Unzip |Fess| file to $FESS_HOME, and specify the following settings in $FESS_HOME/bin/fess.in.sh.

::

    SEARCH_ENGINE_HTTP_URL=http://localhost:9200
    FESS_DICTIONARY_PATH=[absolute path of $SEARCH_ENGINE_HOME]/data/config/


Using Zip Package on Windows
----------------------------

Download and unzipped |Fess| and Elasticsearch to c:\\elasticsearch-<version> and c:\\fess-<version> respectively.

Open a command prompt and install Elasticsearch plugins to plugins directory.

::

    > c:\elasticsearch-<version>\bin\elasticsearch-plugin install org.codelibs:elasticsearch-analysis-fess:8.6.0.0
    > c:\elasticsearch-<version>\bin\elasticsearch-plugin install org.codelibs:elasticsearch-analysis-extension:8.6.0.0
    > c:\elasticsearch-<version>\bin\elasticsearch-plugin install org.codelibs:elasticsearch-minhash:8.6.0.0

Notice that these plugins depend on a version of Elasticsearch.

Next, to install elasticsearch-configsync, create c:\\elasticsearch-<version>\\modules\\configsync folder and then download and unzip `elasticsearch-configsync-8.6.0.0.zip <https://repo.maven.apache.org/maven2/org/codelibs/elasticsearch-configsync/8.6.0.0/elasticsearch-configsync-8.6.0.0.zip>`__.

Moreover, add the following setting to c:\\elasticsearch-<version>\\config\\elasticsearch.yml.

::

    configsync.config_path: c:/elasticsearch-<version>/data/config/
    xpack.security.enabled: false

To connect |Fess| to Elasticsearch, specify the following settings in c:\\fess-<version>\\bin\\fess.in.bat.

::

    set FESS_JAVA_OPTS=%FESS_JAVA_OPTS% -Dfess.search_engine.http_address=http://localhost:9200
    set FESS_JAVA_OPTS=%FESS_JAVA_OPTS% -Dfess.dictionary.path="c:/elasticsearch-<version>/data/config/"


Using RPM/DEB Package
---------------------

First, install RPM/DEB package of Elasticsearch before installing |Fess| package.

For RPM package:

::

    $ sudo rpm -ivh elasticsearch-<version>.rpm

For DEB package:

::

    $ sudo dpkg -i elasticsearch-<version>.deb

Install Elasticsearch plugins to plugins directory.

::

    $ sudo /usr/share/elasticsearch/bin/elasticsearch-plugin install org.codelibs:elasticsearch-analysis-fess:8.6.0.0
    $ sudo /usr/share/elasticsearch/bin/elasticsearch-plugin install org.codelibs:elasticsearch-analysis-extension:8.6.0.0
    $ sudo /usr/share/elasticsearch/bin/elasticsearch-plugin install org.codelibs:elasticsearch-minhash:8.6.0.0

Notice that these plugins depend on a version of Elasticsearch.

Next, install elasticsearch-configsync,

::

    $ curl -o /tmp/configsync.zip https://repo.maven.apache.org/maven2/org/codelibs/elasticsearch-configsync/8.6.0.0/elasticsearch-configsync-8.6.0.0.zip
    $ sudo mkdir -p /usr/share/elasticsearch/modules/configsync
    $ sudo unzip -d /usr/share/elasticsearch/modules/configsync /tmp/configsync.zip

and add the following setting to /etc/elasticsearch/elasticsearch.yml.

::

    configsync.config_path: /var/lib/elasticsearch/config
    xpack.security.enabled: false

After installing Elasticsearch, install RPM/DEB package of |Fess|.

For RPM package:

::

    $ sudo rpm -ivh fess-<version>.rpm

For DEB package:

::

    $ sudo dpkg -i fess-<version>.deb

To add |Fess| and Elasticsearch as a service, run the following command.

If you use systemctl command,

::

    $ sudo /bin/systemctl daemon-reload
    $ sudo /bin/systemctl enable elasticsearch.service
    $ sudo /bin/systemctl enable fess.service

and if you use chkconfig command,

::

    $ sudo /sbin/chkconfig --add elasticsearch
    $ sudo /sbin/chkconfig --add fess
